2004-11-21  Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                                                             
        * gui/widgets/eab-gui-util.c (eab_load_error_dialog) :
        added message which gets prompted when user tries
        to access a book which is not available in offline mode
                                                                                                                             
        * gui/component/addressbook-config.c (eabc_general_offline)
        (offline_status_changed_cb) : added a new check box
        to properties page to mark a book for offline usage
                                                                                                                             
        * gui/component/addressbook.c (load_source_cb) : do no try to
        authenticate in case of offline mode.
        (auth_required_cb) : new call back which gets called
        when backend sends notification for  password to client

2004-11-07  Sivaiah Nallagatla <snallagatla@novell.com>

       * util/eab-book-util.c (eab_name_and_email_query) :
       When name is NULL query against complete email id instead of
       user name part to take care of users@foo.org not matching
       against users@bar.org . Also include query based on name always

       Fix for  #67656


2004-11-08  Andre Klapper  <a901600@gmx.de>

	Fixes bug #61966.

	* addressbook-errors.xml: Add a missing word to a string.

2004-11-08  Steven Zhang <steven.zhang@sun.com>

	* gui/widgets/e-minicard.c: (e_minicard_activate_editor): 
	rename and make it a public function.
	(e_minicard_event): change accordingly.
	* gui/widgets/e-minicard.h: ditto.

2004-11-04  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* gui/contact-editor/e-contact-editor.c (save_contact) :
	populate contact only afte we are sure that data is valid 
	and we can create that.
	Fixes #69079
